# python-education

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: flake8.yml  linters.yml  mypy.yml
models/: models.py
python_education/client_server/: advance_client.py  advance_tcp_socket_server.py  advance_udp_client.py  advance_udp_socket_server.py  elementary_tcp_socket_server.py  socket_client.py  tcp_socket_server.py
python_education/client_server/fast_api/: lesson_2_1.py
python_education/client_server/flask_server/: flask_server.py
python_education/client_server/http_server/: http_server.py
python_education/client_server/socket_server/: advance_client.py  advance_tcp_socket_server.py  elementary_client.py  tcp_advance_client.py  tcp_advance_socket_server.py  tcp_elementary_socket_server.py  udp_advance_client.py  udp_advance_socket_server.py  udp_start_stop_server.py
python_education/context_manager/: DB_custom_context_manager.py  DB_decorator_custom_context_manager.py
python_education/dataclass/: dataclass.py
python_education/decorator_and_closure/: closure.py  decorator.py  decorator_with_save_signature.py
python_education/lambda_function/: lambda_example.py
python_education/logger/: logger.py  logger_for_connection_to_DB.py
python_education/serialization/: serialization_deserialization.py
tests/: test_error_log.py  test_fast_api.py  test_function_add.py  test_http_server.py  test_pytest_raises.py
