[tool.poetry]
name = "python-education"
version = "0.1.0"
description = ""
authors = ["Aleksandr S.Sakhatskii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
logging = "^0.4.9.6"
wraps = "^0.15.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
types-psycopg2 = "^2.9.21.20240819"
flake8-pyproject = "^1.2.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 140
